Backed out changeset 76d24a5414eb (bug 1429721) for devtools failure on browser_net_headers-alignment.js. on a CLOSED TREE
UltraBlame original commit: 74e94759584cda78f2c715bbb8a5c3ab1c524e37

--- a/devtools/client/netmonitor/src/assets/styles/RequestList.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestList.css
@@ -331,6 +331,12 @@
 
 
 
+.requests-list-domain {
+  width: 13%;
+}
+
+
+
 .requests-list-start-time {
   width: 8%;
 }
@@ -359,15 +365,7 @@
   width: 8%;
 }
 
-
-
 .requests-list-response-header {
-  width: 10%;
-}
-
-
-
-.requests-list-domain {
   width: 13%;
 }
 
